@@ -1,5 +1,10 @@
 [b]Version 0.6.6[/b]:
 
+(2008-11-15)
+ * Added a new action to select the next aspect ratio. Assigned by default to
+   key "A". Unfortunately this change breaks compatibility and the aspect
+   ratio setting for all your played videos will be lost.
+
 (2008-11-14)
  * Added the new section Advanced->Proxy in preferences to configure the 
    proxy.
